# Project-Phoenix

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: FindSDL2_image.cmake
src/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h  TextureManager.cpp  TextureManager.h  UserEvent.cpp  UserEvent.h
